make sure subtitleDisplay shows every text, before if it was too long, some are hidden

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -5202,6 +5202,7 @@ html.fullscreen #river_player.nicovideo #media embed#external_nico_0 {
   border: none;
   display: inline-block;
   opacity: 0.8;
+  white-space: normal;
 }
 
 #subtitle_display:empty {
